# apps/api/src/Application/UseCases/Wine/ListWines/WineListItemView.php
@@ -21,7 +21,8 @@ final readonly class WineListItemView
         public ?string $country,
         public ?int $doId,
         public ?string $doName,
-        public ?string $doLogoImage,
+        public ?string $doLogo,
+        public ?string $regionLogo,
         public ?int $vintageYear,
         public ?float $avgScore,
         public string $updatedAt,
